<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">DebianDroid</string>
    
    <!-- Content Titles -->
    <string name="title_item_detail">Item Detail</string>
    <string name="search_packages">Search Packages</string>
    <string name="search_bugs">Search bugs</string>
    <string name="search">Search</string>
    <string name="find_common_interests">Find Common Interests</string>
    <string name="settings">Settings</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="udd">UDD</string>
    <string name="dftp">Debian FTP</string>
    <string name="links">Useful Links</string>
    
    <!-- Common strings -->
    
    <string name="refresh">Refresh</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="searching">Searching<xliff:g>&#8230;</xliff:g> </string>
    <string name="searching_info_about">Searching info about <xliff:g id="name" example="somesearchvalue" >%1$s</xliff:g>. Please wait<xliff:g>&#8230;</xliff:g> </string>
    <string name="searching_info_please_wait">Searching info. Please wait<xliff:g>&#8230;</xliff:g> </string>
    <string name="no_info_found_for">No information found for</string>
    <string name="no_info_found">No information found</string>
    
    <!-- PTS strings -->
    
    <string name="pckg_info_format">Package:
        <xliff:g id="pckgName" example="vim">\n  %1$s\n\n</xliff:g>Latest version:
        <xliff:g id="pckgVersion" example="1.2.34">\n  %2$s\n\n</xliff:g>Maintainer:
        <xliff:g id="pckgMaintName" example="John">\n  %3$s\n\n</xliff:g>Packages overview:
        <xliff:g id="pckgMaintMail" example="somemail">\n  http://qa.debian.org/developer.php?login=%4$s\n\n</xliff:g>Mail:
        <xliff:g id="pckgMaintMail" example="somemail">\n  %4$s\n\n</xliff:g>Bug count:
        <xliff:g id="pckgBugCount" example="40">\n  %5$s\n\n</xliff:g>Uploaders:
        <xliff:g id="pckgUploaders" example="uploaderNames">\n  %6$s\n\n</xliff:g>Binary names:
        <xliff:g id="pckgBinNames" example="binNames">\n  %7$s\n\n</xliff:g>DAK LS:
    </string>
    <string name="all_bugs">All Bugs (<xliff:g id="number" example="10" >%1$s</xliff:g>)</string>
    <string name="pts_search_hint">Type in package name</string>
    <string name="submit_new_bug_report">Submit new bug report</string>
    <string name="info_retrieved"><xliff:g id="number" example="10" >%1$s</xliff:g> info retrieved!</string>
    
    <!-- BTS strings -->
    
    <string name="by_number">by number</string>
    <string name="in_package">in package</string>
    <string name="in_pckgs_maint_by">in pckgs maintained by</string>
    <string name="submitted_by">submitted by</string>
    <string name="with_status">with status</string>
    <string name="with_mail_from">with mail from</string>
    <string name="bts_search_hint">Type in search value</string>
    <string name="bugs_retrieved"><xliff:g id="number" example="10" >%1$s</xliff:g> bugs retrieved!</string>
    <string name="bug_mail_format">Date: <xliff:g id="date" example="somedate">%1$s\n</xliff:g>From<xliff:g id="from" example="mailaddress">: %2$s\n-------------\n</xliff:g>Body<xliff:g id="body" example="bodytext">: %3$s</xliff:g></string>

    <!-- CIF strings -->
    
    <string name="QRCode">QRCode</string>
    <string name="scan_qrcode">Scan a QRCode</string>
    <string name="or_type_other_persons_email_directly">or type other persons email directly</string>
    <string name="invalid_mail_msg">Invalid mail address <xliff:g id="mail" example="bla@bla.bla">%1$s</xliff:g> in search!</string>
    <string name="no_mail_in_settings_msg">Don\'t forget to add the mail you use in packaging in settings!</string>
    <string name="cif_search_hint">other@example.com</string>
    <string name="overlapping_interests">Overlapping Interests</string>
    <string name="maintains_following"><xliff:g id="firstmaint" example="john">%1$s</xliff:g> maintains following packages used as dependencies by <xliff:g id="secondmaint" example="jack" >%2$s</xliff:g>:</string>
    
    <!-- SUBS strings -->
    
    <string name="subscribed_packages">Subscribed Packages (<xliff:g id="number" example="10">%1$s</xliff:g>)</string>
    <string name="subscribed_bugs">Subscribed Bugs (<xliff:g id="number" example="10">%1$s</xliff:g>)</string>
    
    <!-- UDD strings -->
    
    <string name="rcbugs">RCBugs</string>
    <string name="rcbugs_withnum">RCBugs (<xliff:g id="number" example="10">%1$s</xliff:g>)</string>
    <string name="latest_uploads">Latest Uploads</string>
    <string name="latest_uploads_withnum"><xliff:g id="number" example="10">%1$s</xliff:g> Latest Uploads</string>
    <string name="latest_new_maintainers">Latest  <xliff:g id="number" example="10">%1$s</xliff:g> new maintainers</string>
    <string name="new_maintainers">New Maintainers</string>
    
    <!-- DFTP strings -->
    
    <string name="new_packages">New Packages</string>
    <string name="new_packages_withnum"><xliff:g id="number" example="10">%1$s</xliff:g> new packages</string>
    <string name="removed_packages">Removed Packages</string>
    <string name="removed_packages_withnum"><xliff:g id="number" example="10">%1$s</xliff:g> removed packages</string>
    <string name="deferred_packages">Deferred Packages</string>
    <string name="deferred_packages_withnum"><xliff:g id="number" example="10">%1$s</xliff:g> deferred packages</string>
    
    <!-- LINKS strings -->
    
    <string name="links_search_hint">Autosearch for link</string>
    <string name="open_link_with">Open link with</string>
    
    <!-- SETTINGS strings -->
    
    <string name="general_settings">General Settings</string>
    <string name="cache_settings">Cache Settings</string>
    <string name="use_3g">Use 3G</string>
    <string name="use_3g_summary">Tick to use 3G as well to download data or untick to use only WiFi</string>
    <string name="auto_collapse">Auto Collapse lists</string>
    <string name="auto_collapse_summary">Tick to auto collapse expandable lists and only keep one selected group open each time.</string>
    <string name="maint_username">Maintainer username</string>
    <string name="refresh_interval">Auto-refresh interval</string>
    <string name="cache_limit">Cache time limit</string>
    <string name="maint_username_sum">Username of Debian maintainer</string>
    <string name="refresh_interval_sum">Interval (in seconds) between checks for new package/bug data.</string>
    <string name="cache_limit_sum">How many hours to keep retrieved info in cache</string>
    <string name="clear_cache">Clear cache now</string>
    <string name="clear_cache_sum">Clear all cached info now</string>
    <string name="widget_settings">Widget settings</string>
    <string name="maint_email_sum">The email of the debian maintainer of this device</string>
    <string name="maint_email">Maintainer email</string>
    <string name="widget_update_sum">Time (in seconds) between updates of countdown in dinstall widget</string>
    <string name="similar_pckgs">Search similar pckgs</string>
    <string name="similar_pckgs_summary">When searching for package info search for similar package names first</string>
    <string name="widget_interval">Widget update interval</string>
    <string name="cache_cleared">Cache cleared</string>
    
    <!-- Widget strings -->
    
    <string name="debiandroid_widget">DebianDroid Widget</string>
    <string name="widget_text">Next DInstall at: <xliff:g id="timeutc" example="HH:mm:ss">%1$s</xliff:g> or in <xliff:g id="timelocal" example="HH:mm:ss">%2$s</xliff:g> hours (<xliff:g id="timezonelocal" example="SomeTimezone">%3$s</xliff:g>)</string>
    
    <!-- Service strings -->
    
    <string name="connection_restored">Connection restored.</string>
    <string name="lost_connectivity">Lost connectivity, switching to cache only.</string>
    <string name="send_mail">Send mail...</string>

</resources>