<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tablelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <Spinner
        android:id="@+id/btsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:prompt="@string/search_bugs" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/btsInputSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/bts_search_hint"
            android:imeOptions="actionSearch"
            android:inputType="textAutoComplete"
            android:nextFocusLeft="@id/btsInputSearch"
            android:nextFocusUp="@id/btsInputSearch" >
        </EditText>

        <ImageButton
            android:id="@+id/btsSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/search"
            android:gravity="right"
            android:src="@drawable/searcharrow" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/btsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:groupIndicator="@null" />

</LinearLayout>