<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tablelayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/horizontalLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:padding="8dp" >

        <EditText
            android:id="@+id/ptsInputSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/pts_search_hint"
            android:imeOptions="actionSearch"
            android:inputType="textAutoComplete"
            android:nextFocusLeft="@id/ptsInputSearch"
            android:nextFocusUp="@id/ptsInputSearch" >
        </EditText>

        <ImageButton
            android:id="@+id/ptsSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/search"
            android:gravity="right"
            android:src="@drawable/searcharrow" />
    </LinearLayout>

    <TextView
        android:id="@+id/ptsEmptyTextView"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/no_info_found"
        android:textIsSelectable="true"
        android:visibility="gone" />

    <ListView
        android:id="@+id/ptsPckgList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ListView
        android:id="@+id/ptsMadisonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:groupIndicator="@null" />

</LinearLayout>